# casino-cosmico

./: Cargo.toml  Procfile
fixtures/: ticket.json
fixtures/checkin/: checkin.json  ticket.json
src/: discord.rs  lib.rs  main.rs  tito.rs
src/discord/: commands.rs  type_map_keys.rs
src/tito/: client.rs  meta.rs  ticket.rs
src/tito/admin/: client.rs  ticket.rs
src/tito/admin/client/: tickets_handler.rs
src/tito/checkin/: client.rs
src/tito/checkin/client/: checkin_lists_handler.rs
src/tito/client/: tickets_handler.rs
