[package]
name = "casino-cosmico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.7"
bb8-redis = "0.10.1"
lazy_static = "1.4.0"
rand = "0.8"
redis = { version = "0.21", features = ["tls", "tokio-comp", "tokio-native-tls-comp"] }
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
strum = { version = "0.23", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.2"
